--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 body {
-  padding: 20px;
+  padding: 10px;
   text-rendering: optimize-speed;
 }
 
@@ -14,10 +14,10 @@ ul {
 
 .card-component {
   height: 215px !important;
-  width: 100%;
   min-height: 215px;
-  min-width: 100%;
-  border-radius: 20px;
+  /* width: 200px;
+  min-width: 200px; */
+  border-radius: 10px;
 }
 
 .new-card-component {
@@ -80,19 +80,24 @@ ul {
   display: block;
   min-height: 200px;
   width: 100%;
-  font-size: 140px;
   border: 0;
   text-align: center;
   border-radius: 0;
   box-shadow: 0 2px 12px 5px #eee;
   cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50%;
+  position: relative;
 }
 .tile-card-grid-icon {
   border-bottom-left-radius: 12px;
+  background-image: url("./assets/grid.png");
 }
 .tile-card-row-icon {
   border-bottom-right-radius: 12px;
   position: relative;
+  background-image: url("./assets//bars.png");
 }
 .tile-card-row-icon:after,
 .tile-card-row-icon:before {
@@ -111,8 +116,26 @@ ul {
 .tile-card-row-icon:before {
   left: 0;
 }
-.tile-card-stack-icon svg {
+.tile-card-stack-icon:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
   transform: rotate(90deg);
+  background-image: url("./assets/bars.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 55%;
+}
+
+/* header */
+.header {
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 /* search-bar */
@@ -124,7 +147,7 @@ ul {
   padding-right: 15px;
   padding-left: 30px;
   box-shadow: 1px 7px 5px 7px #f3f3f3;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .search-bar .ant-input-suffix {
   right: auto;
@@ -138,6 +161,7 @@ ul {
 }
 .search-dropdown i {
   float: right;
+  padding-top: 5px;
 }
 
 .search-dropdown .ant-btn {
@@ -145,9 +169,6 @@ ul {
   width: 100%;
   border-radius: 20px;
   box-shadow: 0 7px 7px 4px #f3f3f3;
-}
-.search-dropdown .ant-btn .anticon .anticon-down {
-  float: right;
 }
 
 .bucket-tab {
@@ -160,19 +181,27 @@ ul {
 .folder-tab {
   text-align: center;
 }
-.folder-tab .ant-tabs-nav {
+.folder-tab .ant-tabs-nav,
+.folder-tab .ant-tabs-nav .ant-tabs-tab-active {
   font-weight: bold;
+  color: black !important;
 }
 
 /* search-tree */
 .search-tree-collapse {
   background: none !important;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 0 7px 6px 3px #f3f3f3;
+}
+/* .search-tree-collapse .ant-collapse-item {
+  border
+} */
+.search-tree-collapse .ant-collapse-content {
+  border-top: none;
 }
 .search-tree-header {
   text-align: center;
-  border-radius: 20px;
+  border-radius: 20px !important;
 }
 .search-tree {
   display: flex;
@@ -184,6 +213,14 @@ ul {
   max-width: 20%;
   padding: 10px -5px;
   text-align: left;
+}
+.search-tree .list-component .list-component-heading {
+  border-bottom: 1px solid black;
+}
+
+.search-tree .list-component .list-item-icon {
+  float: right;
+  padding-right: 10px;
 }
 
 /* TileCard */
@@ -203,23 +240,23 @@ ul {
   background: #cbc7c7;
 }
 
-.TileCardStackSection1 .new-card-component {
-  transform: translateY(1.5rem);
+.TileCardStackSection1 .ant-col .tile-card-component {
+  transform: translateY(1.5rem) !important;
 }
 
 .TileCardStackSection2 {
-  display: none;
+  display: flex;
   flex-wrap: wrap;
 }
-.stack-list .TileCardStackSection2 {
+/* .stack-list .TileCardStackSection2 {
   display: flex;
-}
+} */
 
 .TileCardStackSection2 .card {
   /* margin: 10px; */
   margin-bottom: 15px;
-  min-width: 0;
-  width: 100%;
+  min-width: initial;
+  width: initial;
 }
 
 .TileCardStackSection2 .tile-card-component:not(:nth-child(1)) {
@@ -254,7 +291,36 @@ ul {
   color: white;
 }
 
-@media only screen and (max-device-width: 600px) {
+/* @media only screen and (min-width: 768px) {
+  .TileCardStackSection2 .card-component {
+    height: 215px !important;
+    min-height: 215px !important;
+    width: 100%;
+  }
+} */
+
+@media only screen and (max-width: 991px) {
+  .user-avatar .ant-avatar {
+    min-height: 200px !important;
+  }
+  .search-layout .tile-card-grid-icon,
+  .search-layout .tile-card-row-icon,
+  .search-layout .tile-card-stack-icon {
+    min-height: 200px !important;
+    font-size: 130px !important;
+    /* box-shadow: 0 7px 6px 3px #f3f3f3; */
+  }
+  .TileCardStackSection2 .card-component {
+    height: 40px !important;
+    min-height: 40px !important;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-device-width: 576px) {
+  .user-avatar .ant-avatar {
+    min-height: 400px !important;
+  }
   .search-layout .tile-card-grid-icon,
   .search-layout .tile-card-row-icon,
   .search-layout .tile-card-stack-icon {
@@ -264,6 +330,7 @@ ul {
   }
   .search-bar .ant-input {
     height: 50px !important;
+    border-radius: 5px !important;
   }
   .search-bar .ant-input::placeholder {
     text-align: center;
@@ -276,9 +343,14 @@ ul {
     display: flex;
     flex-direction: column;
   }
+  .search-dropdown .ant-btn {
+    box-shadow: 0 2px 0px 4px #f3f3f3;
+    border-radius: 5px !important;
+  }
 
   .search-dropdown i {
     float: right;
+    padding-top: 5px;
   }
   .search-dropdown div {
     width: 100%;
@@ -288,13 +360,33 @@ ul {
     margin-bottom: initial;
     margin-left: 0;
   }
-  .card-component {
-    height: 215px !important;
-    min-height: 215px !important;
-    width: 40px !important;
-    min-width: 40px;
-    border-radius: 35px;
+  .search-tree-collapse {
+    margin-top: -15px !important;
+    border-radius: 5px !important;
   }
+  .search-tree {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    flex-wrap: wrap;
+  }
+  .search-tree .list-component {
+    width: initial;
+    max-width: initial;
+    padding-bottom: 10px;
+  }
+  .search-tree .list-component .list-item-icon {
+    float: right;
+    padding-right: 10px;
+  }
+
+  /* .card-section1 .TileCardStackSection1 .card-component {
+    height: 40px !important;
+    min-height: 40px !important;
+    width: 100% !important;
+    min-width: 100%;
+    border-radius: 35px;
+  } */
   .card-section2 .TileCardStackSection2 .card-component {
     height: 40px !important;
     min-height: 40px !important;
@@ -302,8 +394,8 @@ ul {
     min-width: 100%;
     border-radius: 35px;
   }
-  .TileCardStackSection2 .card {
+  /* .TileCardStackSection2 .card {
     width: 163px !important;
     min-width: 163px !important;
-  }
+  } */
 }
