--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,11 @@ body {
   padding: 10px;
   text-rendering: optimize-speed;
 }
-
+.app {
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
 ul {
   list-style: none;
   padding-left: 0;
@@ -83,19 +87,25 @@ ul {
   border: 0;
   text-align: center;
   border-radius: 0;
-  box-shadow: 0 2px 12px 5px #eee;
+  /* box-shadow: 0 2px 12px 5px #eee; */
   cursor: pointer;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 50%;
   position: relative;
 }
+.search-layout .tile-card-stack-icon {
+  box-shadow: 2px 2px 9px 3px #f3f3f3;
+}
 .tile-card-grid-icon {
   border-bottom-left-radius: 12px;
+  box-shadow: -2px 2px 9px 3px #f3f3f3;
   background-image: url("./assets/grid.png");
 }
 .tile-card-row-icon {
   border-bottom-right-radius: 12px;
+  box-shadow: 0px 5px 4px 0px #f3f3f3;
+
   position: relative;
   background-image: url("./assets//bars.png");
 }
@@ -132,11 +142,11 @@ ul {
 }
 
 /* header */
-.header {
+/* .header {
   width: 100%;
   max-width: 1024px;
   margin: 0 auto;
-}
+} */
 
 /* search-bar */
 
